...
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_top_corners_background_create"
        app:layout_constraintBottom_toTopOf="@+id/btn_create_event_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_event_name_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_event_description_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/rb_new_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...
                    app:hintTextColor="@color/event_hub_text_field_hint_create">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_street_name_create"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                    app:hintTextColor="@color/event_hub_text_field_hint_create">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_street_number_create"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                    app:hintTextColor="@color/event_hub_text_field_hint_create">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_postal_code_create"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                    app:hintTextColor="@color/event_hub_text_field_hint_create">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_city_create"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                    app:hintTextColor="@color/event_hub_text_field_hint_create">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_region_create"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                        app:hintTextColor="@color/event_hub_text_field_hint_create">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_country_iso_create"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_select_event_start_date"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_select_event_start_time"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_select_event_end_date"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_select_event_end_time"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_selected_event_end_time"> <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_event_max_participants_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
